tests/ui/typech/generic_argument_self_invalid_bound.stderr
× error[LM4120]: type constraint not satisfied
    ╭─[generic_argument_self_invalid_bound.lm:15:17]
 14 │     fn foo() {
 15 │         generic<Self>();
    ∶                 ^^^^ type A does not implement Bar...
 16 │     }
    ∶
 1  │ fn generic<T: Bar>() { }
    ∶               ^^^ ...which is required by the type parameter T
    ╰──