tests/ui/typech/generic_argument_self_invalid_bound.lm
fn generic<T: Bar>() { }

struct A { }

trait Foo {
    fn foo();
}

trait Bar {
    fn bar();
}

use Foo: A {
    fn foo() {
        generic<Self>();
    }
}
